--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             position: { x: -10, y: 0, z: -12 },
             moved: false,
             mixer: null,
-            animationPath: '/public/puppy.glb',
+            animationPath: './public/puppy.glb',
             scale: 2.5,
             url: 'http://localhost:8080/dog'  // Puppy model's iframe URL
         },
@@ -207,7 +207,7 @@
         const gltfLoader = new THREE.GLTFLoader();
         const gltfModel = document.querySelector('#gltfModel');
 
-        gltfLoader.load('app.glb', function(gltf) {
+        gltfLoader.load('./public/app.glb', function(gltf) {
             gltf.scene.scale.set(10, 10, 10);
             gltf.scene.position.set(0, 0, 0);
             gltfModel.object3D.add(gltf.scene);
