Moving public outwards

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             mixer: null,
             animationPath: './public/ductbone.glb',
             scale: 1,  // Adjust scale as needed
-            url: 'http://localhost:8080/game'  // Duct bone model's iframe URL
+            url: './public/HERE/index.html'  // Duct bone model's iframe URL
         },
         tv: {
             url: 'http://localhost:8080/news'  // TV clickable area's iframe URL
